Update contact information and clean up content
Updated GitHub link in contact list and removed unnecessary sections.

--- a/index.html.html
+++ b/index.html.html
@@ -566,24 +566,8 @@
             <li><strong>Email:</strong> louay.azouaghe.2002@gmail.com</li>
             <li><strong>Phone:</strong> +212 6 18 32 34 95</li>
             <li><strong>Location:</strong> Rabat, Morocco</li>
-            <li><strong>LinkedIn / GitHub:</strong> add your profile links when you publish</li>
+            <li><strong>GitHub:</strong> https://LouDrives.github.io/louay-portfolio/</li>
           </ul>
-        </div>
-        <div class="card">
-          <h3>How this maps to Google Sites</h3>
-          <p class="meta">Sections you can recreate as pages or anchors</p>
-          <ul style="font-size:0.85rem; color:var(--muted); list-style:disc; padding-left:1.1rem;">
-            <li><strong>Home / Welcome:</strong> hero + quick intro</li>
-            <li><strong>About:</strong> “Who I am” & “At a glance” cards</li>
-            <li><strong>Projects:</strong> two main project cards</li>
-            <li><strong>Skills:</strong> four skill columns</li>
-            <li><strong>Experience:</strong> internship + degree</li>
-            <li><strong>Goals & Contact:</strong> career goals + contact info</li>
-          </ul>
-          <p style="margin-top:0.6rem; font-size:0.82rem; color:var(--muted);">
-            Use this page as visual inspiration: you can copy the text blocks into Google Sites, use “cards” and
-            “columns”, and match the sections with your navigation menu.
-          </p>
         </div>
       </div>
     </section>
